--- a/journal.org
+++ b/journal.org
@@ -11723,11 +11723,15 @@ for(i in 1:64){
 parameters=sapply(coefficients,unlist)
 mean_theta=mean(parameters[2,])
 sd_theta=sd(parameters[2,])
+sd_alpha=sd(parameters[1,])
 #+end_src
+
+#+RESULTS:
 
 #+begin_src R :results output :session *R* :exports both
 library(ggplot2)
-frame=data.frame(alpha=parameters[1,],theta=parameters[2,],cpu=1:64)
+frame=data.frame(alpha=parameters[1,],theta=parameters[2,])
+cpu=1:64
 #+end_src
 
 #+begin_src R :results output graphics :file ./images/alpha_on_theta_lm.png :exports both :width 600 :height 400 :session *R* 
@@ -11738,32 +11742,103 @@ ggplot(data=frame)+geom_point(aes(theta,alpha,color=factor(cpu)))+stat_ellipse(m
 [[file:./images/alpha_on_theta_lm.png]]
 
 As we notice, this graph looks pretty close for the posterior
-visualisation graphs, except that theta's values are smaller. Now
-we'll try to get two clusters of our values, especially for alpha.
+visualisation graphs, except that theta's values are smaller. 
 
-#+begin_src R :results output graphics :file ./images/alpha_on_theta_clustered.png :exports both :width 600 :height 400 :session *R* 
-means = kmeans(frame$alpha, 2, nstart = 50)
-means$cluster = as.factor(means$cluster)
-ggplot(frame, aes(theta,alpha, color = means$cluster)) + geom_point()+stat_ellipse(mapping = aes(theta,alpha))
+EDIT: now we'll try to see how many clusters we should have.
+
+#+begin_src R :results output graphics :file ./images/scree_plot_number_of_clusters.png :exports both :width 600 :height 400 :session *R* 
+dw2 = scale(frame) # standardize variables
+wss = (nrow(dw2)-1)*sum(apply(dw2,2,var))
+for (i in 2:15){
+   wss[i] <- sum(kmeans(dw2,centers=i)$withinss)
+}
+plot(1:15, wss, type="b", xlab="Number of Clusters", ylab="Within groups sum of squares")
 #+end_src
 
 #+RESULTS:
-[[file:./images/alpha_on_theta_clustered.png]]
+[[file:./images/scree_plot_number_of_clusters.png]]
+
+This plot should be interpreted this way: we want to take an x value
+that has a corresponding y value that isn't part of the "plateau" of
+the graph. Indeed this is a scree plot, and it indicates we should
+have a number of clusters that keeps the data before the part where it
+flatlines: which means 1 to 2 clusters is ideal. 1 cluster is
+equivalent to no clustering.
+
+Now we'll try to get two and three clusters of our values.
 
 #+begin_src R :results output :session *R* :exports both
-mean_alpha=c(means$centers)
+means
+#+end_src
+
+#+RESULTS:
+#+begin_example
+K-means clustering with 2 clusters of sizes 56, 8
+
+Cluster means:
+         alpha        theta
+1 6.705254e-11 2.073341e-13
+2 7.790064e-11 2.874012e-13
+
+Clustering vector:
+ [1] 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 1 1 1 1 1 1
+[39] 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
+Levels: 1 2
+
+Within cluster sum of squares by cluster:
+[1] 6.800437e-23 1.640503e-22
+ (between_SS / total_SS =  78.0 %)
+
+Available components:
+
+[1] "cluster"      "centers"      "totss"        "withinss"     "tot.withinss"
+[6] "betweenss"    "size"         "iter"         "ifault"
+#+end_example
+
+#+begin_src R :results output graphics :file ./images/alpha_on_theta_clustered_2.png :exports both :width 600 :height 400 :session *R* 
+means = kmeans(frame,2)
+means2 = kmeans(frame,3)
+means$cluster = as.factor(means$cluster)
+means2$cluster = as.factor(means2$cluster)
+ggplot(frame, aes(theta,alpha, color = means$cluster)) + geom_point()+stat_ellipse()
+#+end_src
+
+#+RESULTS:
+[[file:./images/alpha_on_theta_clustered_2.png]]
+
+#+begin_src R :results output graphics :file ./images/alpha_on_theta_clustered_3.png :exports both :width 600 :height 400 :session *R* 
+ggplot(frame, aes(theta,alpha, color = means2$cluster)) + geom_point()+stat_ellipse()
+#+end_src
+
+#+RESULTS:
+[[file:./images/alpha_on_theta_clustered_3.png]]
+
+#+begin_src R :results output :session *R* :exports both
+mean_alpha=c(means$centers[,1])
+mean_alpha2=c(means2$centers[,1])
+mean_theta=c(means$centers[,2])
+mean_theta2=c(means2$centers[,2])
 sd_alpha=sd(parameters[1,])
 delta=table(means$cluster)/64
+delta2=table(means2$cluster)/64
 delta=c(delta[[1]],delta[[2]])
+delta2=c(delta2[[1]],delta2[[2]],delta2[[3]])
 da=data.frame(mu_alpha=mean_alpha,sd_alpha=sd_alpha,mu_theta=mean_theta,sd_theta=sd_theta,delta=delta)
+da2=data.frame(mu_alpha=mean_alpha2,sd_alpha=rep(sd_alpha,3),mu_theta=mean_theta2,sd_theta=rep(sd_theta,3),delta=delta2)
 da
+da2
 #+end_src
 
 #+RESULTS:
 : 
 :       mu_alpha     sd_alpha     mu_theta     sd_theta delta
-: 1 7.818031e-11 4.181416e-12 2.190926e-13 4.699789e-14 0.125
-: 2 6.712536e-11 4.181416e-12 2.190926e-13 4.699789e-14 0.875
+: 1 6.705254e-11 4.093588e-12 2.073341e-13 4.861048e-14 0.875
+: 2 7.790064e-11 4.093588e-12 2.874012e-13 4.861048e-14 0.125
+: 
+:       mu_alpha     sd_alpha     mu_theta     sd_theta    delta
+: 1 7.372851e-11 4.093588e-12 2.823902e-13 4.861048e-14 0.109375
+: 2 6.690206e-11 4.093588e-12 2.056027e-13 4.861048e-14 0.843750
+: 3 8.311217e-11 4.093588e-12 2.768817e-13 4.861048e-14 0.046875
 
 Compared to our previous results:
 
@@ -11963,4 +12038,3 @@ precise enough. Besides we have a lot of divergent transitions and the
 execution time quadrupled just by giving a slightly higher
 variability. This model isn't adapted to our data.
 
-**** TODO Testing mclust
